<resources>
    <string name="app_name">ESC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="title_activity_service_page">ServicePage</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title">Emergency Service Contact</string>

    <!-- Drawer menu item -->
    <string name="call_menu">Call</string>
    <string name="change_country_menu">Change country</string>
    <string name="about_menu">About</string>

    <!-- Activity main page -->
    <string name="mainpage_btn_emergency">Emergency</string>

    <!-- Activity landing page -->
    <string name="landingpage_country_text">Country :</string>
    <string name="landingpage_btn_confirm">Confirm</string>

    <!-- Navigation drawer -->
    <string name="drawer_header_first_text">Emergency</string>
    <string name="drawer_header_second_text">Service Contact</string>

    <!-- About page -->
    <string name="aboutpage_toolbar_title">About</string>
    <string name="aboutpage_explanation">
        ESC - Emergency Service Contact is a not-for-profit utility application. Emergency Service Contact
        originally a university project for entrepreneurship. The goal is to be easy, simple and accessible
        that anyone could pickup and call emergency.
        \n\n
        ESC uses advertising as the main form of support, though opt-in in respect to the publisher and the
        developer of the application. ESC will only receive database updates, bug fixes, and performance tweak.
    </string>
    <string name="aboutpage_explanation2">
        Idea, Design and database by:\nAtn010\nwww.atn010.com‎
    </string>
    <string name="aboutpage_explanation3">
        Developed by:\nZentricode\ndev.zentricode@gmail.com‎
    </string>
    <string name="aboutpage_explanation4">
        Consulted and published by:\nDirectDev\ndirectdev.mobile@gmail.com‎
    </string>

    <!-- DB service type -->
    <string name="servicetype_general">General</string>
    <string name="servicetype_police">Police</string>
    <string name="servicetype_medical">Medical</string>
    <string name="servicetype_fire">Fire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Splash</string>
</resources>
