<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentAboutPage"
        android:background="@color/colorBackgroundBlack">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutpage_explanation"
            android:id="@+id/item1"
            android:textColor="@color/colorWhite"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutpage_explanation2"
            android:id="@+id/item2"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/item1"
            android:layout_alignStart="@+id/item1"
            android:layout_marginTop="15dp"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutpage_explanation3"
            android:id="@+id/item3"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/item2"
            android:layout_alignLeft="@+id/item2"
            android:layout_alignStart="@+id/item2"
            android:layout_marginTop="15dp"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutpage_explanation4"
            android:id="@+id/item4"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/item3"
            android:layout_alignLeft="@+id/item3"
            android:layout_alignStart="@+id/item3"
            android:layout_marginTop="15dp"
            android:gravity="center" />

    </RelativeLayout>
</ScrollView>