<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.admin.emergencyservicecontact.LandingPage"
        tools:showIn="@layout/activity_landing_page"
        android:background="@color/colorBackgroundBlack">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/escIcon"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/escTextView"
            android:layout_below="@+id/escIcon"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="35dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/landingpage_country_text"
            android:id="@+id/countryTextView"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:layout_below="@+id/escTextView"
            android:layout_marginTop="30dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/escTextView"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landingpage_btn_confirm"
            android:id="@+id/btnConfirm"
            android:layout_marginTop="63dp"
            android:layout_below="@+id/spinner"
            android:layout_centerHorizontal="true"
            android:onClick="onClickConfirm"
            android:nestedScrollingEnabled="true"
            android:background="@color/colorPrimaryRed"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

    </RelativeLayout>

</ScrollView>